Fixed arrow misalignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -131,6 +131,10 @@ a:focus {
     }
 }
 
+.arrow {
+    margin-left: -1px;
+}
+
 .intro {
     display: table;
     width: 100%;
